// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hoist-css babel plugin should hoist CSS from JSX from class 1`] = `
"
function MyComponent() {
  return React.createElement(\\"article\\", {
    \\"class\\": _article
  });
}

var _article = css\`color: \${colors.red};\`;"
`;

exports[`hoist-css babel plugin should hoist CSS from JSX from className 1`] = `
"
function MyComponent() {
  return React.createElement(\\"article\\", {
    className: _article
  });
}

var _article = css\`color: \${colors.red};\`;"
`;

exports[`hoist-css babel plugin should hoist CSS from JSX from styles 1`] = `
"var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; };

function MyComponent() {
  return React.createElement(\\"article\\", _extends({
    id: \\"post\\"
  }, styles(_article, _article2)));
}

var _article = css\`color: \${colors.red};\`;

var _article2 = css\`font-size: 12px;\`;"
`;

exports[`hoist-css babel plugin should noop if no styles or class present 1`] = `
"
function MyComponent() {
  return React.createElement(\\"article\\", { id: \\"post\\" });
}"
`;

exports[`hoist-css babel plugin should not affect other template literals in class 1`] = `
"
function MyComponent() {
  React.createElement(\\"article\\", {
    \\"class\\": \`color: \${colors.red};\`
  });
}"
`;

exports[`hoist-css babel plugin should not affect other template literals in className 1`] = `
"
function MyComponent() {
  React.createElement(\\"article\\", {
    className: sass\`color: \${colors.red};\`
  });
}"
`;

exports[`hoist-css babel plugin should not affect other template literals in styles 1`] = `
"var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; };

function MyComponent() {
  React.createElement(\\"article\\", _extends({
    id: \\"post\\"
  }, styles(sass\`color: \${colors.red};\`, \`font-size: 12px;\`)));
}"
`;
